--- a/package.json
+++ b/package.json
@@ -14,22 +14,24 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^7.3.3",
     "app-beauty": "file:",
     "axios": "^1.7.7",
     "expo": "^53.0.9",
     "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
     "expo-notifications": "~0.31.2",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
     "metro": "0.82.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.10.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-linear-gradient": "~14.1.4"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
